--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-validator": "^3.1.3",
     "jade": "~1.11.0",
+    "mongoose": "4.8.7",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
-    "mongoose": "4.8.7"
+    "serve-favicon": "~2.3.2"
   }
 }
